# poly2tri

./: .gitignore  CMakeLists.txt
cmake/: poly2tri-config.cmake
poly2tri/: poly2tri_export.h  version.hpp
poly2tri/common/: orientation.h  shapes.cc  shapes.h  utils.h
poly2tri/sweep/: advancing_front.cc  advancing_front.h  cdt.h  sweep.cc  sweep.h  sweep_context.h
